--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -4,3 +4,6 @@
   description: JavaScript 常常缩写为 "JS"，不过这货没中文名（也有人叫他脚本）。至于 JavaScript 和 Java 到底是什么关系，就像雷锋和雷锋塔的关系。
 - id: FrontEnd
   description: 前端是开发界鄙视链最底层的存在～～
+- id: aaaa
+  description: aaaa
+  image: img/speeches-cover.jpg
