--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-emotion": "4.0.6",
     "gatsby-plugin-feed": "2.1.0",
     "gatsby-plugin-google-analytics": "2.0.18",
+    "gatsby-plugin-netlify-cms": "^3.0.18",
     "gatsby-plugin-postcss": "2.0.7",
     "gatsby-plugin-react-helmet": "3.0.12",
     "gatsby-plugin-sharp": "2.0.33",
@@ -45,6 +46,7 @@
     "gatsby-transformer-yaml": "2.1.11",
     "lodash": "4.17.11",
     "modern-normalize": "0.5.0",
+    "netlify-cms": "^2.9.1",
     "normalize.css": "8.0.1",
     "polished": "3.2.0",
     "postcss-color-function": "4.1.0",
