--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,8 +5,8 @@ backend:
     - admin
     - editor
 
-media_folder: static/assets
-public_folder: /assets
+media_folder: src/content/img
+public_folder: src/content
 
 collections:
   - name: blog
