--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,12 +13,13 @@ collections:
     label: Blog
     folder: src/content
     create: true
-    slug: "{{year}}-{{month}}-{{day}}gst" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{year}}-{{month}}-{{day}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields:
       - {label: "tamplate", name: "layout", widget: "hidden", default: "blog"}
       - {label: "title", name: "title", widget: "string"}
       - {label: "date", name: "date", widget: "datetime"}
-      - {label: "image", name: "image", widget: image}
+      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "image", name: "image", widget: image, default: "img/writing.jpg"}
       - {label: "author", name: "author", widget: "string"}
       - {label: "body", name: "body", widget: "markdown"}
-      - {label: "Tags", name: "tags", widget: "list"}
+
