--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ collections:
     folder: src/content
     create: true
     slug: "{{year}}-{{month}}-{{day}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    preview_path: blog/{{slug}}
     fields:
       - {label: "tamplate", name: "layout", widget: "hidden", default: "blog"}
       - {label: "title", name: "title", widget: "string"}
