[IMP]试着修复cms提交功能

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,8 +5,8 @@ backend:
     - admin
     - editor
 
-media_folder: src/content/img
-public_folder: src/content
+media_folder: static/asset
+public_folder: /asset
 
 collections:
   - name: blog
