--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,15 +11,15 @@ public_folder: /asset
 collections:
   - name: post
     label: Blog
-    folder: src/content
+    foldere: src/content
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields:
       - {label: "tamplate", name: "layout", widget: "hidden", default: "post"}
-      - {label: "title", name: "title", widget: "string"}
+      - {label: "Title", name: "title", widget: "string "}
       - {label: "date", name: "date", widget: "datetime"}
-      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "author", name: "author", widget: "select", options: ["Helve", "Delusion"]}
+      - {label: "Tags", name: "tags", widget: "select", options: ["React", "JavaScript", "FrontEnd"]}
       - {label: "image", name: "image", widget: image, default: "img/writing.jpg"}
-      - {label: "author", name: "author", widget: "string"}
       - {label: "body", name: "body", widget: "markdown"}
 
