--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -7,7 +7,7 @@
 - id: aaaa
   description: aaaa
   image: img/speeches-cover.jpg
-- id: C++
+- id: cpp
   description: 就是那个谁都听说过但是谁都不会的语言
 - id: LeetCode
   description: 少年你渴望力量吗？
